hand, hand rankings/game engine. wireframe for round